testcases/semantic/valid/shadow.rs
fn main() {
    let a: i32 = 1;
    let a: i32 = a + 1;
    exit(0);
}
