testcases/semantic/invalid/exit.rs
fn main() -> () {
    exit(1);
    let a: i32 = 1;
}
